Update OWASP dependency scan config en maven compiler opties