@@ -272,9 +272,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArguments>
-                        <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>
+                    <compilerArgument>-Djava.endorsed.dirs=${endorsed.dir}</compilerArgument>
                 </configuration>
             </plugin>
             <plugin>
